--- a/settings.json
+++ b/settings.json
@@ -61,6 +61,7 @@
         "!Split",
         "!Join sequence"
     ],
+    //Terraform
     "terraform.languageServer": {
         "enabled": true
     },
