--- a/settings.json
+++ b/settings.json
@@ -7,6 +7,7 @@
     "workbench.octiconsUpdate.enabled": true,
     "workbench.tips.enabled": false,
     "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.showTabs": true,
     //editor
     "editor.quickSuggestionsDelay": 1,
     "editor.tabCompletion": "off",
