--- a/settings.json
+++ b/settings.json
@@ -33,6 +33,7 @@
     "diffEditor.ignoreTrimWhitespace": false,
     "workbench.editor.limit.enabled": true,
     "workbench.editor.limit.value": 10,
+    "editor.suggest.showSnippets": false,
 
     //fonts
     "editor.fontFamily": "Cascadia Code", //"Fira Code", //"Source Code Pro",
@@ -51,7 +52,6 @@
     "files.defaultLanguage": "{activeEditorLanguage}",
     "material-icon-theme.showWelcomeMessage": false,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Nordico",
 
     //terminal
     "terminal.integrated.shell.osx": "/bin/zsh",
@@ -61,7 +61,6 @@
     //git
     "git.enableSmartCommit": true,
     "git.confirmSync": false,
-    "gitlens.currentLine.enabled": false,
 
     //LANGUAGE SPECIFIC CHANGES
     //PowerShell
@@ -73,6 +72,7 @@
     "powershell.codeFormatting.preset": "OTBS",
     "powershell.codeFormatting.useCorrectCasing": true,
     "powershell.codeFormatting.autoCorrectAliases": true,
+    "powershell.codeFormatting.addWhitespaceAroundPipe": true,
     "powershell.codeFormatting.pipelineIndentationStyle": "IncreaseIndentationAfterEveryPipeline",
     "powershell.developer.editorServicesLogLevel": "Normal",
     "powershell.scriptAnalysis.settingsPath": "/users/<username>/.PSScriptAnalyzerSettings.psd1",
@@ -111,16 +111,27 @@
 
     //Code Spelling
     "cSpell.userWords": [
+        "Datacenter",
+        "Runbook",
         "ansible",
+        "automox",
+        "autopower",
         "browsable",
         "chmod",
+        "datetime",
+        "endfunction",
+        "endregion",
         "hashicorp",
+        "ho",
+        "hostnames",
         "jobtemplate",
         "jobtemplate spec",
         "kerberos",
         "keyvault",
         "kubernetes",
         "ldap",
+        "notcontains",
+        "notlike",
         "postgresql",
         "repos",
         "spec",
@@ -144,8 +155,52 @@
         "dockerfile",
         "ini",
         "jinja",
+        "powershell",
         "properties",
         "sql",
+        "terraform",
         "xml"
     ],
+    "terminal.explorerKind": "external",
+    "terminal.external.osxExec": "iTerm.app",
+    "gitlens.mode.statusBar.enabled": false,
+    "gitlens.hovers.currentLine.over": "line",
+    "gitlens.currentLine.enabled": false,
+    "gitlens.codeLens.scopes": [
+        "document"
+    ],
+    "gitlens.hovers.avatars": false,
+    "gitlens.hovers.enabled": false,
+    "gitlens.menus": {
+        "editor": {
+            "blame": false,
+            "clipboard": true,
+            "compare": true,
+            "details": false,
+            "history": false,
+            "remote": false
+        },
+        "editorGroup": false,
+        "editorTab": false,
+        "explorer": {
+            "clipboard": true,
+            "compare": true,
+            "history": true,
+            "remote": true
+        },
+        "scmGroup": {
+            "compare": true,
+            "openClose": true,
+            "stash": true,
+            "stashInline": true
+        },
+        "scmItem": {
+            "clipboard": true,
+            "compare": true,
+            "history": true,
+            "remote": true,
+            "stash": true
+        }
+    },
+    "workbench.colorTheme": "GitHub Dark",
 }
