--- a/cfg/binds.cfg
+++ b/cfg/binds.cfg
@@ -55,7 +55,7 @@ bind "PGUP" "volume .3; playvol buttons\blip2 1"
 bind "PGDN" "volume 0; playvol buttons\blip1 1"
 bind "KP_MULTIPLY" "volume 0"
 bind "PAUSE" "pause"
-bind "SHIFT" "+speed"
+bind "SHIFT" "+sprint"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "+ninja"
